--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/display/quotation_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/display/quotation_list.html
@@ -114,17 +114,20 @@ $(function(){
 		ordering: true, 			// 정렬 기능 켬
 		scrollY: 100,
 		columns : [
-			{data: "VBELN", title: "[[#{EUP_L_0013}]]", className:"link"},//Inuqiry No.
-			{data: "BSTKD", title: "[[#{EUP_L_0015}]]"},//P.O. No.
-			{data: "VBELN2", title: "[[#{EUP_L_0043}]]"},//Sales Doc. No.
-			{data: "ERDAT2", title: "[[#{EUP_L_0018}]]"},//Create Date
-			{data: "COUNT", title: "[[#{EUP_L_0019}]]"},//Line Item
-			{data: "T_NETWR", title: "[[#{EUP_L_0045}]]"},//Order Amt.
-			{data: "WAERK", title: "[[#{EUP_L_0021}]]"},//Curr.
-			{data: "RFGSK_TX", title: "[[#{EUP_L_0042}]]"}//Open Status
+			{data: "VBELN", title: "[[#{EUP_L_0013}]]"},//Inuqiry No. 0
+			{data: "BSTKD", title: "[[#{EUP_L_0015}]]"},//P.O. No. 1
+			{data: "VBELN2", title: "[[#{EUP_L_0043}]]"},//Sales Doc. No. 2
+			{data: "ERDAT2", title: "[[#{EUP_L_0018}]]"},//Create Date 3
+			{data: "COUNT", title: "[[#{EUP_L_0019}]]"},//Line Item 4
+			{data: "T_NETWR", title: "[[#{EUP_L_0045}]]"},//Order Amt 5.
+			{data: "WAERK", title: "[[#{EUP_L_0021}]]"},//Curr. 6
+			{data: "RFGSK_TX", title: "[[#{EUP_L_0042}]]"}//Open Status 7
 		],
 		columnDefs: [
-			{ className: "left", targets: "_all" }
+			//{ className: "left", targets: "_all" }
+			{targets: [0], className: 'link dt-body-center'},
+			{targets: [1, 2, 3, 4, 6, 7], className: "dt-body-center"},
+			{targets: [5], className: "dt-body-right"}
 		],
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/display/quotation_list/data",
