--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/parts_number_popup_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/parts_number_popup_list.html
@@ -88,6 +88,9 @@
 				{name: "MATNR", data: "MATNR", title: "[[#{EUP_L_0102}]]"},	// Parts No.
 				{name: "MAKTX", data: "MAKTX", title: "[[#{EUP_L_0031}]]"}		// Description
 			],
+			columnDefs: [
+				{targets: [1], className: "dt-body-center"}
+			],
 			ajax: {
 				url: "[[${BASE_PATH}]]/info/parts_number_popup_list/data",
 				type: "GET",
