--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/complaint/display/complaint_detail.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/complaint/display/complaint_detail.html
@@ -125,23 +125,22 @@
 	    		scrollY: 100,
 	    		columns : [
 	    			//{data: "SEQ",	 		title: "Seq."			},
-	    			{data: "REF_ORD", 		title: "[[#{UKP_L_0041}]]"	},	// Reference No
-	    			{data: "MATERIAL", 		title: "[[#{UKP_L_0055}]]"	},	// Part No
-	    			{data: "QTY", 			title: "[[#{UKP_L_0056}]]"	},	// Qty	
-	    			{data: "TEXT", 			title: "[[#{UKP_L_0057}]]"	},	// Complaint
-	    			{data: "TEXT2", 		title: "[[#{UKP_L_0045}]]"	},	// Reason																										
-	    			{data: "COMPLAINT_DESC",title: "[[#{UKP_L_0058}]]"	},	// Text
-	    			{data: "RCOMMENT", 		title: "[[#{UKP_L_0059}]]"	},	// Reply
-	    			{data: "FILE_NAME", 	title: "[[#{UKP_L_0060}]]", className:'link clickable'},	// File	
-	    			{data: "ZZDEALDT", 		title: "[[#{UKP_L_0061}]]"},			// Origin Doc. Date
+	    			{data: "REF_ORD", 		title: "[[#{UKP_L_0041}]]",	width: '10%'},	// Reference No 0
+	    			{data: "MATERIAL", 		title: "[[#{UKP_L_0055}]]",	width: '10%'},	// Part No 1
+	    			{data: "QTY", 			title: "[[#{UKP_L_0056}]]",	width: '10%'},	// Qty	 2
+	    			{data: "TEXT", 			title: "[[#{UKP_L_0057}]]",	width: '10%'},	// Complaint 3
+	    			{data: "TEXT2", 		title: "[[#{UKP_L_0045}]]"},				// Reason	 4	 																								
+	    			{data: "COMPLAINT_DESC",title: "[[#{UKP_L_0058}]]",	width: '10%'},	// Text 5
+	    			{data: "RCOMMENT", 		title: "[[#{UKP_L_0059}]]",	width: '10%'},	// Reply 6
+	    			{data: "FILE_NAME", 	title: "[[#{UKP_L_0060}]]",	width: '10%'},	// File 7
+	    			{data: "ZZDEALDT", 		title: "[[#{UKP_L_0061}]]",	width: '10%'},	// Origin Doc. Date 8
 	    			{data: "INT_NO", 		title: "INT_NO(Hidden)"},
 	    			{data: "DOCU_ITEM",		title: "DOCU_ITEM(Hidden)"}    			
 	    		],  	
 	    		columnDefs: [
-	    			{ 
-	    				"targets": [ 9, 10 ],
-	                    "visible": false,				
-	    			}			
+	    			{targets: [0, 1, 2, 8], className: 'dt-body-center'},
+	    			{targets: [7], className: 'link clickable'},
+	    			{targets: [9, 10], "visible": false}
 	    		],	    		    		
 	    		data: detailList,
 	    		initComplete:function(settings, json) 
