--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/info/applied_model_popup_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/info/applied_model_popup_list.html
@@ -63,10 +63,8 @@ $(function(){
 			{data: "SPART", 	title: "SPART"	}			
 		],
 		columnDefs: [
-			{ 
-				"targets": [ 2,3,4,5 ],
-                "visible": false,				
-			}			
+			{targets: [0, 1], className: 'dt-body-center'},
+			{targets: [2, 3, 4, 5], visible: false}
 		],
 		ajax: {
 			url: "[[${BASE_PATH}]]/info/applied_model_popup_list/data",
