--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/monthly/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/monthly/list.html
@@ -54,7 +54,11 @@
 	</div>
 	<div class="split-row-compact"></div>
 	<div id="AREA_chart" style="width:60%; margin: auto; "></div>
-	
+<style>
+body {
+	overflow-y: auto;
+}
+</style>
 <script>
 $(document).ready(function() {
 	ProgressBar.hide();
@@ -74,9 +78,7 @@ $(document).ready(function() {
 			thead.push("<tr><th></th>");
 			
 			$.each(column, function(index, item) {
-				thead.push("<th class='center text-ellipsis' title='" + item.CAPTION + "'>");
-				thead.push(item.CAPTION);
-				thead.push("</th>");
+				thead.push("<th class='center text-ellipsis' title='" + item.CAPTION + "'>" + item.CAPTION + "</th>");
 			});
 			
 			thead.push("</tr>");
@@ -95,9 +97,7 @@ $(document).ready(function() {
 					
 					let formattedValue = JpUtilsNumber.addComma(value);
 					
-					tbody.push("<td class='right text-ellipsis' title='" + formattedValue + "'>");
-					tbody.push(formattedValue);
-					tbody.push("</td>");
+					tbody.push("<td class='right text-ellipsis' title='" + formattedValue + "'>" + formattedValue + "</td>");
 					
 					if (JpUtilsString.isEmpty(currency))
 					{
