--- a/src/main/resources/templates/portal/iv/hq/parts/export/report/sales/monthly/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/report/sales/monthly/list.html
@@ -42,7 +42,6 @@
 			</table>
 		</form>
 	</div>	
-	
 	<div class="condition-area">
 		<div class="condition-title right"><span th:text="|#{HQP_L_CURR}:|"></span> <span id="curr"></span></div>
 		<table class="condition table-fixed order-report">
@@ -54,7 +53,11 @@
 	</div>
 	<div class="split-row-compact"></div>
 	<div id="AREA_chart" style="width:60%; margin: auto; "></div>
-	
+<style>
+body {
+	overflow-y: auto;
+}
+</style>
 <script>
 $(document).ready(function() {
 	ProgressBar.hide();
@@ -74,9 +77,7 @@ $(document).ready(function() {
 			thead.push("<tr><th></th>");
 			
 			$.each(column, function(index, item) {
-				thead.push("<th class='center text-ellipsis' title='" + item.CAPTION + "'>");
-				thead.push(item.CAPTION);
-				thead.push("</th>");
+				thead.push("<th class='center text-ellipsis' title='" + item.CAPTION + "'>" + item.CAPTION + "</th>");
 			});
 			
 			thead.push("</tr>");
@@ -95,9 +96,7 @@ $(document).ready(function() {
 					
 					let formattedValue = JpUtilsNumber.addComma(value);
 					
-					tbody.push("<td class='right text-ellipsis' title='" + formattedValue + "'>");
-					tbody.push(formattedValue);
-					tbody.push("</td>");
+					tbody.push("<td class='right text-ellipsis' title='" + formattedValue + "'>" + formattedValue + "</td>");
 					
 					if (JpUtilsString.isEmpty(currency))
 					{
@@ -139,7 +138,6 @@ $(document).ready(function() {
 			});
 			
 			$.each(axis, function(index1, item1) {
-				
 				if (index1 <= 1 || index1 == 3)
 				{
 					let chartColumn = [];
